[package]
name = "jungle-chess"
version = "1.1.0"
edition = "2021"

[lib]
name = "junglechess"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
clap = { version = "3.1.18", features = ["derive"], optional = true}

[features]
build-binary = ["clap"]

[[bin]]
name = "junglechess"
path = "src/cli.rs"
required-features = ["build-binary"]